--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="icon" href="./public/logo_ep.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sistemas de Avaliação</title>
+    <title>Sistema de Avaliações</title>
   </head>
   <body>
     <div id="root"></div>
