feat: adicionar configEnv para as variaveis de ambiente

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="icon" href="./public/logo_ep.png" />
+    <link rel="icon" type="icon" href="./logo_ep.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sistema de Avaliações</title>
   </head>
